# Discord-IP-Monitor-Bot

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  ASYNC_RATE_LIMITER.md  CLAUDE.md  FUTURE_FEATURES.md  INTEGRATION_TODO.md  README.md  SLASH_COMMAND_MIGRATION.md  TESTING_TODO.md  cache.json  coverage.xml  discord-ip-monitor.service  ip_apis.json  ip_monitor.db  main.py  message_queue.json  pyproject.toml  pytest-integration.ini  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.sh
.github/: CI-CD-SETUP-SUMMARY.md  branch-protection-setup.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  code-quality.yml  release.yml  security.yml
ip_monitor/: __init__.py  bot.py  config.py  ip_api_config.py  ip_service.py  storage.py
ip_monitor/commands/: __init__.py  admin_commands.py  ip_commands.py
ip_monitor/commands/admin_commands/: __init__.py  admin_command_router.py  api_handler.py  base_handler.py  bot_lifecycle_handler.py  cache_handler.py  config_handler.py  queue_handler.py
ip_monitor/slash_commands/: __init__.py  admin_slash_commands.py  ip_slash_commands.py
ip_monitor/utils/: async_rate_limiter.py  cache.py  circuit_breaker.py  discord_rate_limiter.py  logging_setup.py  message_queue.py  rate_limiter.py  service_health.py
scripts/: setup-dev.sh
tests/: ENHANCED_FIXTURES_GUIDE.md  README.md  conftest.py  example_enhanced_fixtures_usage.py  test_infrastructure_demo.py
tests/integration/: conftest.py  test_admin_command_router.py  test_admin_commands_http_integration.py  test_admin_workflow.py  test_bot_lifecycle_http_integration.py  test_diagnostics_example.py  test_error_recovery.py  test_error_recovery_enhanced.py  test_ip_monitoring_workflow.py  test_ip_service_http_integration.py  test_performance.py  test_real_world_scenarios.py
tests/unit/: test_bot.py  test_bot_original.py  test_config.py  test_config_original.py  test_config_refactored.py  test_configuration_edge_cases.py  test_edge_cases.py  test_error_handling.py  test_event_handlers.py  test_ip_service.py  test_main.py  test_storage.py
tests/unit/bot/: __init__.py  conftest.py  test_bot_initialization.py  test_bot_lifecycle.py  test_cog_management.py  test_error_handling.py  test_event_handlers.py  test_integration.py  test_scheduled_tasks.py  test_slash_commands.py  test_task_scheduling.py
tests/unit/commands/: __init__.py  test_ip_commands_core.py  test_ip_commands_messaging.py  test_ip_commands_user_interface.py
tests/unit/commands/admin_commands/: __init__.py  test_admin_command_router.py  test_api_handler.py  test_base_handler.py  test_bot_lifecycle_handler.py  test_cache_handler.py  test_config_handler.py  test_queue_handler.py
tests/unit/config/: __init__.py  conftest.py  test_edge_cases.py  test_environment_loading.py  test_file_persistence.py  test_runtime_and_migration.py  test_validation.py
tests/unit/slash_commands/: __init__.py  test_admin_slash_commands.py  test_ip_slash_commands.py
tests/unit/utils/: test_async_rate_limiter.py  test_cache.py  test_circuit_breaker.py  test_discord_rate_limiter.py  test_logging_setup.py  test_message_queue.py  test_rate_limiter.py  test_service_health.py
tests/utils/: DIAGNOSTICS_GUIDE.md  __init__.py  database_cleanup.py  diagnostic_helpers.py  error_diagnostics.py  http_server_mocks.py  performance_testing.py  resource_integration.py  resource_monitor.py  test_data_generators.py  test_reporting.py  test_stability.py  timeout_helpers.py
